crates/anodized/tests/compile_fail/struct_field_unknown.rs
#![no_main]

use anodized::spec;

#[spec(maintains: self.z < 42.0)]
struct Point {
    x: f32,
    y: f32,
}
